kubernetes/main/apps/ai/ollama/app/networkpolicy.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: ollama
  namespace: ai
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: ollama
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: ai
      toPorts:
        - ports:
            - port: "11434"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: ANY
          rules:
            dns:
              - matchPattern: "*"
    - toFQDNs:
        - matchName: registry.ollama.ai
        - matchPattern: "*.ollama.com"
        - matchName: huggingface.co
        - matchPattern: "*.hf.co"
        - matchName: cdn-lfs.huggingface.co
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
